make sure the dashboard covers the entire page

--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,7 @@
 
 html {
   background-color: rgb(0, 0, 0);
+  height: 100%;
 }
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
